@@ -744,6 +744,9 @@ Brightness=255
 # set the serial port speed [default: 9600, legal: 1200, 2400, 9600, 19200, 115200]
 Speed=9600
 
+# Set serial data parity [default: 0 (None), legal: 0(=none), 1(=odd), 2(=even)]
+Parity=0
+
 # re-initialize VFD ?
 #Reboot=yes
 
